parser/src/main/java/parser/flatzinc/FlatzincParser.java
/*
 * Copyright (c) 1999-2012, Ecole des Mines de Nantes
 * All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 *     * Neither the name of the Ecole des Mines de Nantes nor the
 *       names of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND ANY
 * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE REGENTS AND CONTRIBUTORS BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

// $ANTLR 3.4 parser/flatzinc/FlatzincParser.g 2012-10-19 17:44:46

package parser.flatzinc;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class FlatzincParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ANNOTATIONS", "APAR", "ARRAY", "ARRPAR", "ARRVAR", "AVAR", "BOOL", "CARITY", "CHAR", "CIDX", "CL", "CM", "COMMENT", "CONSTRAINT", "DC", "DD", "DO", "ENGINE", "EQ", "ESC_SEQ", "EXPONENT", "EXPR", "FALSE", "FILTER", "FLOAT", "FOR", "GROUPBY", "HEAP", "HEX_DIGIT", "IDENTIFIER", "IN", "INDEX", "INT", "INT_CONST", "LB", "LIST", "LP", "LS", "MANY", "MAXIMIZE", "MINIMIZE", "MN", "NOT", "OCTAL_ESC", "OEQ", "OF", "OGT", "OLT", "ONE", "ONQ", "OR", "ORDERBY", "PAR", "PARITY", "PIDX", "PL", "PPRIO", "PPRIOD", "PREDICATE", "QUEUE", "RB", "RP", "RS", "SATISFY", "SC", "SET", "SOLVE", "STRING", "TRUE", "Tokens", "UNICODE_ESC", "VAR", "VCARD", "VIDX", "WFOR", "WONE", "WS"
    };

    public static final int EOF = -1;
    public static final int AND = 4;
    public static final int ANNOTATIONS = 5;
    public static final int APAR = 6;
    public static final int ARRAY = 7;
    public static final int ARRPAR = 8;
    public static final int ARRVAR = 9;
    public static final int AVAR = 10;
    public static final int BOOL = 11;
    public static final int CARITY = 12;
    public static final int CHAR = 13;
    public static final int CIDX = 14;
    public static final int CL = 15;
    public static final int CM = 16;
    public static final int COMMENT = 17;
    public static final int CONSTRAINT = 18;
    public static final int DC = 19;
    public static final int DD = 20;
    public static final int DO = 21;
    public static final int ENGINE = 22;
    public static final int EQ = 23;
    public static final int ESC_SEQ = 24;
    public static final int EXPONENT = 25;
    public static final int EXPR = 26;
    public static final int FALSE = 27;
    public static final int FILTER = 28;
    public static final int FLOAT = 29;
    public static final int FOR = 30;
    public static final int GROUPBY = 31;
    public static final int HEAP = 32;
    public static final int HEX_DIGIT = 33;
    public static final int IDENTIFIER = 34;
    public static final int IN = 35;
    public static final int INDEX = 36;
    public static final int INT = 37;
    public static final int INT_CONST = 38;
    public static final int LB = 39;
    public static final int LIST = 40;
    public static final int LP = 41;
    public static final int LS = 42;
    public static final int MANY = 43;
    public static final int MAXIMIZE = 44;
    public static final int MINIMIZE = 45;
    public static final int MN = 46;
    public static final int NOT = 47;
    public static final int OCTAL_ESC = 48;
    public static final int OEQ = 49;
    public static final int OF = 50;
    public static final int OGT = 51;
    public static final int OLT = 52;
    public static final int ONE = 53;
    public static final int ONQ = 54;
    public static final int OR = 55;
    public static final int ORDERBY = 56;
    public static final int PAR = 57;
    public static final int PARITY = 58;
    public static final int PIDX = 59;
    public static final int PL = 60;
    public static final int PPRIO = 61;
    public static final int PPRIOD = 62;
    public static final int PREDICATE = 63;
    public static final int QUEUE = 64;
    public static final int RB = 65;
    public static final int RP = 66;
    public static final int RS = 67;
    public static final int SATISFY = 68;
    public static final int SC = 69;
    public static final int SET = 70;
    public static final int SOLVE = 71;
    public static final int STRING = 72;
    public static final int TRUE = 73;
    public static final int Tokens = 74;
    public static final int UNICODE_ESC = 75;
    public static final int VAR = 76;
    public static final int VCARD = 77;
    public static final int VIDX = 78;
    public static final int WFOR = 79;
    public static final int WONE = 80;
    public static final int WS = 81;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[]{};
    }

    // delegators


    public FlatzincParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public FlatzincParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() {
        return FlatzincParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "parser/flatzinc/FlatzincParser.g";
    }


    public static class flatzinc_model_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;


    // $ANTLR start "flatzinc_model"
    // parser/flatzinc/FlatzincParser.g:43:1: flatzinc_model : ( pred_decl )* ( param_decl )* ( var_decl )* ( constraint )* solve_goal ;
    public final FlatzincParser.flatzinc_model_return flatzinc_model() throws RecognitionException {
        FlatzincParser.flatzinc_model_return retval = new FlatzincParser.flatzinc_model_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        FlatzincParser.pred_decl_return pred_decl1 = null;

        FlatzincParser.param_decl_return param_decl2 = null;

        FlatzincParser.var_decl_return var_decl3 = null;

        FlatzincParser.constraint_return constraint4 = null;

        FlatzincParser.solve_goal_return solve_goal5 = null;


        try {
            // parser/flatzinc/FlatzincParser.g:44:2: ( ( pred_decl )* ( param_decl )* ( var_decl )* ( constraint )* solve_goal )
            // parser/flatzinc/FlatzincParser.g:44:6: ( pred_decl )* ( param_decl )* ( var_decl )* ( constraint )* solve_goal
            {
                root_0 = (Object) adaptor.nil();


                // parser/flatzinc/FlatzincParser.g:44:6: ( pred_decl )*
                loop1:
                do {
                    int alt1 = 2;
                    switch (input.LA(1)) {
                        case PREDICATE: {
                            alt1 = 1;
                        }
                        break;

                    }

                    switch (alt1) {
                        case 1:
                            // parser/flatzinc/FlatzincParser.g:44:7: pred_decl
                        {
                            pushFollow(FOLLOW_pred_decl_in_flatzinc_model59);
                            pred_decl1 = pred_decl();

                            state._fsp--;

                            adaptor.addChild(root_0, pred_decl1.getTree());

                        }
                        break;

                        default:
                            break loop1;
                    }
                } while (true);


                // parser/flatzinc/FlatzincParser.g:44:19: ( param_decl )*
                loop2:
                do {
                    int alt2 = 2;
                    alt2 = dfa2.predict(input);
                    switch (alt2) {
                        case 1:
                            // parser/flatzinc/FlatzincParser.g:44:20: param_decl
                        {
                            pushFollow(FOLLOW_param_decl_in_flatzinc_model64);
                            param_decl2 = param_decl();

                            state._fsp--;

                            adaptor.addChild(root_0, param_decl2.getTree());

                        }
                        break;

                        default:
                            break loop2;
                    }
                } while (true);


                // parser/flatzinc/FlatzincParser.g:44:33: ( var_decl )*
                loop3:
                do {
                    int alt3 = 2;
                    switch (input.LA(1)) {
                        case ARRAY:
                        case VAR: {
                            alt3 = 1;
                        }
                        break;

                    }

                    switch (alt3) {
                        case 1:
                            // parser/flatzinc/FlatzincParser.g:44:34: var_decl
                        {
                            pushFollow(FOLLOW_var_decl_in_flatzinc_model69);
                            var_decl3 = var_decl();

                            state._fsp--;

                            adaptor.addChild(root_0, var_decl3.getTree());

                        }
                        break;

                        default:
                            break loop3;
                    }
                } while (true);


                // parser/flatzinc/FlatzincParser.g:44:45: ( constraint )*
                loop4:
                do {
                    int alt4 = 2;
                    switch (input.LA(1)) {
                        case CONSTRAINT: {
                            alt4 = 1;
                        }
                        break;

                    }

                    switch (alt4) {
                        case 1:
                            // parser/flatzinc/FlatzincParser.g:44:46: constraint
                        {
                            pushFollow(FOLLOW_constraint_in_flatzinc_model74);
                            constraint4 = constraint();

                            state._fsp--;

                            adaptor.addChild(root_0, constraint4.getTree());

                        }
                        break;

                        default:
                            break loop4;
                    }
                } while (true);


                pushFollow(FOLLOW_solve_goal_in_flatzinc_model78);
                solve_goal5 = solve_goal();

                state._fsp--;

                adaptor.addChild(root_0, solve_goal5.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "flatzinc_model"


    public static class pred_decl_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;


    // $ANTLR start "pred_decl"
    // parser/flatzinc/FlatzincParser.g:48:1: pred_decl : PREDICATE IDENTIFIER LP pred_param ( CM pred_param )* RP SC -> ^( PREDICATE IDENTIFIER ( pred_param )+ ) ;
    public final FlatzincParser.pred_decl_return pred_decl() throws RecognitionException {
        FlatzincParser.pred_decl_return retval = new FlatzincParser.pred_decl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PREDICATE6 = null;
        Token IDENTIFIER7 = null;
        Token LP8 = null;
        Token CM10 = null;
        Token RP12 = null;
        Token SC13 = null;
        FlatzincParser.pred_param_return pred_param9 = null;

        FlatzincParser.pred_param_return pred_param11 = null;


        Object PREDICATE6_tree = null;
        Object IDENTIFIER7_tree = null;
        Object LP8_tree = null;
        Object CM10_tree = null;
        Object RP12_tree = null;
        Object SC13_tree = null;
        RewriteRuleTokenStream stream_SC = new RewriteRuleTokenStream(adaptor, "token SC");
        RewriteRuleTokenStream stream_RP = new RewriteRuleTokenStream(adaptor, "token RP");
        RewriteRuleTokenStream stream_PREDICATE = new RewriteRuleTokenStream(adaptor, "token PREDICATE");
        RewriteRuleTokenStream stream_IDENTIFIER = new RewriteRuleTokenStream(adaptor, "token IDENTIFIER");
        RewriteRuleTokenStream stream_CM = new RewriteRuleTokenStream(adaptor, "token CM");
        RewriteRuleTokenStream stream_LP = new RewriteRuleTokenStream(adaptor, "token LP");
        RewriteRuleSubtreeStream stream_pred_param = new RewriteRuleSubtreeStream(adaptor, "rule pred_param");
        try {
            // parser/flatzinc/FlatzincParser.g:49:2: ( PREDICATE IDENTIFIER LP pred_param ( CM pred_param )* RP SC -> ^( PREDICATE IDENTIFIER ( pred_param )+ ) )
            // parser/flatzinc/FlatzincParser.g:49:6: PREDICATE IDENTIFIER LP pred_param ( CM pred_param )* RP SC
            {
                PREDICATE6 = (Token) match(input, PREDICATE, FOLLOW_PREDICATE_in_pred_decl92);
                stream_PREDICATE.add(PREDICATE6);


                IDENTIFIER7 = (Token) match(input, IDENTIFIER, FOLLOW_IDENTIFIER_in_pred_decl94);
                stream_IDENTIFIER.add(IDENTIFIER7);


                LP8 = (Token) match(input, LP, FOLLOW_LP_in_pred_decl96);
                stream_LP.add(LP8);


                pushFollow(FOLLOW_pred_param_in_pred_decl98);
                pred_param9 = pred_param();

                state._fsp--;

                stream_pred_param.add(pred_param9.getTree());

                // parser/flatzinc/FlatzincParser.g:49:41: ( CM pred_param )*
                loop5:
                do {
                    int alt5 = 2;
                    switch (input.LA(1)) {
                        case CM: {
                            alt5 = 1;
                        }
                        break;

                    }

                    switch (alt5) {
                        case 1:
                            // parser/flatzinc/FlatzincParser.g:49:42: CM pred_param
                        {
                            CM10 = (Token) match(input, CM, FOLLOW_CM_in_pred_decl101);
                            stream_CM.add(CM10);


                            pushFollow(FOLLOW_pred_param_in_pred_decl103);
                            pred_param11 = pred_param();

                            state._fsp--;

                            stream_pred_param.add(pred_param11.getTree());

                        }
                        break;

                        default:
                            break loop5;
                    }
                } while (true);


                RP12 = (Token) match(input, RP, FOLLOW_RP_in_pred_decl107);
                stream_RP.add(RP12);


                SC13 = (Token) match(input, SC, FOLLOW_SC_in_pred_decl109);
                stream_SC.add(SC13);


                // AST REWRITE
                // elements: PREDICATE, pred_param, IDENTIFIER
                // token labels: 
                // rule labels: retval
                // token list labels: 
                // rule list labels: 
                // wildcard labels: 
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                root_0 = (Object) adaptor.nil();
                // 50:2: -> ^( PREDICATE IDENTIFIER ( pred_param )+ )
                {
                    // parser/flatzinc/FlatzincParser.g:50:5: ^( PREDICATE IDENTIFIER ( pred_param )+ )
                    {
                        Object root_1 = (Object) adaptor.nil();
                        root_1 = (Object) adaptor.becomeRoot(
                                stream_PREDICATE.nextNode()
                                , root_1);

                        adaptor.addChild(root_1,
                                stream_IDENTIFIER.nextNode()
                        );

                        if (!(stream_pred_param.hasNext())) {
                            throw new RewriteEarlyExitException();
                        }
                        while (stream_pred_param.hasNext()) {
                            adaptor.addChild(root_1, stream_pred_param.nextTree());

                        }
                        stream_pred_param.reset();

                        adaptor.addChild(root_0, root_1);
                    }

                }


                retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "pred_decl"


    public static class pred_param_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;


    // $ANTLR start "pred_param"
    // parser/flatzinc/FlatzincParser.g:53:1: pred_param : pred_param_type CL IDENTIFIER -> ^( CL pred_param_type IDENTIFIER ) ;
    public final FlatzincParser.pred_param_return pred_param() throws RecognitionException {
        FlatzincParser.pred_param_return retval = new FlatzincParser.pred_param_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token CL15 = null;
        Token IDENTIFIER16 = null;
        FlatzincParser.pred_param_type_return pred_param_type14 = null;


        Object CL15_tree = null;
        Object IDENTIFIER16_tree = null;
        RewriteRuleTokenStream stream_IDENTIFIER = new RewriteRuleTokenStream(adaptor, "token IDENTIFIER");
        RewriteRuleTokenStream stream_CL = new RewriteRuleTokenStream(adaptor, "token CL");
        RewriteRuleSubtreeStream stream_pred_param_type = new RewriteRuleSubtreeStream(adaptor, "rule pred_param_type");
        try {
            // parser/flatzinc/FlatzincParser.g:54:5: ( pred_param_type CL IDENTIFIER -> ^( CL pred_param_type IDENTIFIER ) )
            // parser/flatzinc/FlatzincParser.g:54:9: pred_param_type CL IDENTIFIER
            {
                pushFollow(FOLLOW_pred_param_type_in_pred_param137);
                pred_param_type14 = pred_param_type();

                state._fsp--;

                stream_pred_param_type.add(pred_param_type14.getTree());

                CL15 = (Token) match(input, CL, FOLLOW_CL_in_pred_param139);
                stream_CL.add(CL15);


                IDENTIFIER16 = (Token) match(input, IDENTIFIER, FOLLOW_IDENTIFIER_in_pred_param141);
                stream_IDENTIFIER.add(IDENTIFIER16);


                // AST REWRITE
                // elements: CL, IDENTIFIER, pred_param_type
                // token labels: 
                // rule labels: retval
                // token list labels: 
                // rule list labels: 
                // wildcard labels: 
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                root_0 = (Object) adaptor.nil();
                // 55:5: -> ^( CL pred_param_type IDENTIFIER )
                {
                    // parser/flatzinc/FlatzincParser.g:55:9: ^( CL pred_param_type IDENTIFIER )
                    {
                        Object root_1 = (Object) adaptor.nil();
                        root_1 = (Object) adaptor.becomeRoot(
                                stream_CL.nextNode()
                                , root_1);

                        adaptor.addChild(root_1, stream_pred_param_type.nextTree());

                        adaptor.addChild(root_1,
                                stream_IDENTIFIER.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                    }

                }


                retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "pred_param"


    public static class pred_param_type_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;


    // $ANTLR start "pred_param_type"
    // parser/flatzinc/FlatzincParser.g:58:1: pred_param_type : ( par_pred_param_type | var_pred_param_type );
    public final FlatzincParser.pred_param_type_return pred_param_type() throws RecognitionException {
        FlatzincParser.pred_param_type_return retval = new FlatzincParser.pred_param_type_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        FlatzincParser.par_pred_param_type_return par_pred_param_type17 = null;

        FlatzincParser.var_pred_param_type_return var_pred_param_type18 = null;


        try {
            // parser/flatzinc/FlatzincParser.g:59:5: ( par_pred_param_type | var_pred_param_type )
            int alt6 = 2;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1:
                    // parser/flatzinc/FlatzincParser.g:59:9: par_pred_param_type
                {
                    root_0 = (Object) adaptor.nil();


                    pushFollow(FOLLOW_par_pred_param_type_in_pred_param_type175);
                    par_pred_param_type17 = par_pred_param_type();

                    state._fsp--;

                    adaptor.addChild(root_0, par_pred_param_type17.getTree());

                }
                break;
                case 2:
                    // parser/flatzinc/FlatzincParser.g:60:9: var_pred_param_type
                {
                    root_0 = (Object) adaptor.nil();


                    pushFollow(FOLLOW_var_pred_param_type_in_pred_param_type185);
                    var_pred_param_type18 = var_pred_param_type();

                    state._fsp--;

                    adaptor.addChild(root_0, var_pred_param_type18.getTree());

                }
                break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "pred_param_type"


    public static class par_type_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;


    // $ANTLR start "par_type"
    // parser/flatzinc/FlatzincParser.g:63:1: par_type : ( ARRAY LS index_set ( CM index_set )* RS OF par_type_u -> ^( ARRPAR ( index_set )+ par_type_u ) | par_type_u -> ^( APAR par_type_u ) );
    public final FlatzincParser.par_type_return par_type() throws RecognitionException {
        FlatzincParser.par_type_return retval = new FlatzincParser.par_type_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ARRAY19 = null;
        Token LS20 = null;
        Token CM22 = null;
        Token RS24 = null;
        Token OF25 = null;
        FlatzincParser.index_set_return index_set21 = null;

        FlatzincParser.index_set_return index_set23 = null;

        FlatzincParser.par_type_u_return par_type_u26 = null;

        FlatzincParser.par_type_u_return par_type_u27 = null;


        Object ARRAY19_tree = null;
        Object LS20_tree = null;
        Object CM22_tree = null;
        Object RS24_tree = null;
        Object OF25_tree = null;
        RewriteRuleTokenStream stream_RS = new RewriteRuleTokenStream(adaptor, "token RS");
        RewriteRuleTokenStream stream_OF = new RewriteRuleTokenStream(adaptor, "token OF");
        RewriteRuleTokenStream stream_ARRAY = new RewriteRuleTokenStream(adaptor, "token ARRAY");
        RewriteRuleTokenStream stream_LS = new RewriteRuleTokenStream(adaptor, "token LS");
        RewriteRuleTokenStream stream_CM = new RewriteRuleTokenStream(adaptor, "token CM");
        RewriteRuleSubtreeStream stream_index_set = new RewriteRuleSubtreeStream(adaptor, "rule index_set");
        RewriteRuleSubtreeStream stream_par_type_u = new RewriteRuleSubtreeStream(adaptor, "rule par_type_u");
        try {
            // parser/flatzinc/FlatzincParser.g:64:5: ( ARRAY LS index_set ( CM index_set )* RS OF par_type_u -> ^( ARRPAR ( index_set )+ par_type_u ) | par_type_u -> ^( APAR par_type_u ) )
            int alt8 = 2;
            switch (input.LA(1)) {
                case ARRAY: {
                    alt8 = 1;
                }
                break;
                case BOOL:
                case FLOAT:
                case INT:
                case SET: {
                    alt8 = 2;
                }
                break;
                default:
                    NoViableAltException nvae =
                            new NoViableAltException("", 8, 0, input);

                    throw nvae;

            }

            switch (alt8) {
                case 1:
                    // parser/flatzinc/FlatzincParser.g:64:9: ARRAY LS index_set ( CM index_set )* RS OF par_type_u
                {
                    ARRAY19 = (Token) match(input, ARRAY, FOLLOW_ARRAY_in_par_type204);
                    stream_ARRAY.add(ARRAY19);


                    LS20 = (Token) match(input, LS, FOLLOW_LS_in_par_type206);
                    stream_LS.add(LS20);


                    pushFollow(FOLLOW_index_set_in_par_type208);
                    index_set21 = index_set();

                    state._fsp--;

                    stream_index_set.add(index_set21.getTree());

                    // parser/flatzinc/FlatzincParser.g:64:28: ( CM index_set )*
                    loop7:
                    do {
                        int alt7 = 2;
                        switch (input.LA(1)) {
                            case CM: {
                                alt7 = 1;
                            }
                            break;

                        }

                        switch (alt7) {
                            case 1:
                                // parser/flatzinc/FlatzincParser.g:64:29: CM index_set
                            {
                                CM22 = (Token) match(input, CM, FOLLOW_CM_in_par_type211);
                                stream_CM.add(CM22);


                                pushFollow(FOLLOW_index_set_in_par_type213);
                                index_set23 = index_set();

                                state._fsp--;

                                stream_index_set.add(index_set23.getTree());

                            }
                            break;

                            default:
                                break loop7;
                        }
                    } while (true);


                    RS24 = (Token) match(input, RS, FOLLOW_RS_in_par_type217);
                    stream_RS.add(RS24);


                    OF25 = (Token) match(input, OF, FOLLOW_OF_in_par_type219);
                    stream_OF.add(OF25);


                    pushFollow(FOLLOW_par_type_u_in_par_type221);
                    par_type_u26 = par_type_u();

                    state._fsp--;

                    stream_par_type_u.add(par_type_u26.getTree());
